--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="container">
-      <h1>PDF to Text Converter</h1>
+      <h1 class="home-header">PDF to Text Converter</h1>
       <input type="file" id="inpFile" />
       <button type="button" id="btnUpload">Upload</button>
       <br />
@@ -19,7 +19,7 @@
         id="resultText"
         placeholder="Your PDF text will appear here..."
       ></textarea>
-      <button type="button" id="btnCopy">Copy All Text</button>
+      <button type="button" class="btnCopy">Copy All Text</button>
     </div>
 
     <script>
