--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
       <br />
       <textarea
         style="width: 300px; height: 150px"
-        id="resultText"
+        class="resultText"
         placeholder="Your PDF text will appear here..."
       ></textarea>
       <button type="button" class="btnCopy">Copy All Text</button>
